--- a/application.yml
+++ b/application.yml
@@ -1,7 +1,7 @@
 # Main properties file
 spring:
   application:
-    name: Configuration
+    name: Config-default
 eureka:
   instance:
     prefer-ip-address: true
