--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,1 +1,13 @@
 # Development properties
+
+spring:
+  application:
+    name: Config-dev
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
