--- a/application-prod.yml
+++ b/application-prod.yml
@@ -1,1 +1,13 @@
 # Production properties 
+
+spring:
+  application:
+    name: Config-prod
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
