--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,19 +2,21 @@ server:
   port: 8083
 
 spring:
+  application:
+    name: RATING-SERVICE
   data:
     mongodb:
       uri: mongodb://localhost:27017
       database: microservices
 
-  application:
-    name: RATING-SERVICE
+  config:
+    import: optional:configserver:http://localhost:8085
 
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka/
