implementing rate limiter using resilience4j

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,3 +65,10 @@ resilience4j:
       ratingHotelService:
         max-attempts: 3
         wait-duration: 3s
+
+  ratelimiter:
+    instances:
+      userRateLimiter:
+        limit-refresh-period: 4s
+        limit-for-period: 2
+        timeout-duration: 2s
